# MeetPlan-backend

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pyproject.toml  pytest.ini  readme.md
.github/: auto_assign.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-sign.yml  codeql-analysis.yml  lint.yml  tests.yml
MeetPlan/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
apps/meet_plan/: admin.py  apps.py  models.py  tests.py
apps/meet_plan/schema/: __init__.py  mutation.py  query.py
apps/pku_auth/: admin.py  apps.py  backends.py  meta.py  models.py  schema.py  signals.py  tests.py
apps/pku_auth/management/commands/: createclient.py
apps/pku_auth/schema/: __init__.py  mutation.py  query.py
apps/user/: admin.py  apps.py  models.py  schema.py  signals.py  tests.py  validators.py
apps/user/schema/: __init__.py  mutation.py  query.py
translation/locale/zh_Hans/LC_MESSAGES/: django.po
