[tool.poetry]
name = "MeetPlan-backend"
version = "0.1.0"
description = "Python Backend of Meet Plan for the shool of Physics"
authors = ["Rainshaw <rxg@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
graphene-django = "^3.0.0b1"
django-filter = "^2.4.0"
django-graphql-jwt = "^0.3.2"
requests = "^2.25.1"
django-guardian = "^2.3.0"
graphene-django-optimizer = "^0.8.0"
graphene-django-plus = "^2.4.5"
celery = "^5.0.5"
django-celery-beat = "^2.2.0"
django-celery-results = "^2.0.1"
mysqlclient = {version = "^2.0.3", optional = true}
psycopg2 = {version = "^2.8.6", optional = true}

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
freezegun = "^1.1.0"
flake8 = "^3.9.2"
black = "^21.5b1"
pytest-cov = "^2.12.0"
pytest-django = "^4.2.0"
django-debug-toolbar = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
