[tool.poetry]
name = "MeetPlan-backend"
version = "0.1.0"
description = "Python Backend of Meet Plan for the shool of Physics"
authors = ["Rainshaw <rxg@live.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
django-filter = "^2.4.0"
requests = "^2.25.1"
django-guardian = "^2.4.0"
celery = "^5.1.0"
django-celery-beat = "^2.2.0"
django-celery-results = "^2.0.1"
mysqlclient = {version = "^2.0.3", optional = true}
psycopg2 = {version = "^2.8.6", optional = true}

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
freezegun = "^1.1.0"
flake8 = "^3.9.2"
black = "^21.12b0"
pytest-cov = "^2.12.1"
pytest-django = "^4.4.0"
django-debug-toolbar = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
